---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: ?????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2023-11-05
  Balancing:
    - Made automation science a bit more expensive, because it was too much cheaper than logistic science
  Bugfixes:
    - Fixed a few localization issues
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2023-11-05
  Bugfixes:
    - Fixed long inserters trying to put items in invisible beacons
    - Slightly buffed burner inserters
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2023-11-04
  Features:
    - New ore refining loop
  Changes:
    - Burner inserters are now burner again, but are twice as fast
    - Inserter fuel leech is now a dependency - it makes it possible to actually build stuff with burner inserters.
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023-11-04
  Bugfixes:
    - Fixed a tiny error in the burner assembler texture
    - Reordered the changelog
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023-11-04
  Bugfixes:
    - Burner assembling machines are way less flickery now
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023-11-04
  Features:
    - Added some menu simulations
    - Added graphics for the burner assembling machine
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023-11-02
  Bugfixes:
    - Fixed that copy-and-pasting a blueprint containing burners with bots would lead to them not getting burner buffs