@@ -2,6 +2,7 @@
 Version: 0.2.3
 Date: ?????
   Changes:
+    - Text plates should now be compatible
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 2023-11-05
